# basic-riscv-verilog

./: .gitmodules  LICENSE  README.md  build.cmd  build.py  build_rom.cmd  build_rom.py  create_rom_file.py  run.cmd  run.py  run_architecture_tests.py  run_module_tests.py  run_tests.py
src/: BusArbiter.sv  BusArbiter.v  CPU.sv  CPU.v  InstructionDecoder.sv  InstructionDecoder.v  IntegerUnit.sv  IntegerUnit.v  MemoryArbiter.sv  MemoryArbiter.v  MemoryUnit.sv  MemoryUnit.v  Multiplier.sv  Multiplier.v  RegisterFile.sv  RegisterFile.v  StationParameter.sv  StationParameter.v  StationValue.v  Testbench.v  flatten.v  rom.S  rom.c
src/architecture_tests/: CMakeLists.txt  Testbench.sv  linker.ld  riscv_test.h
src/module_tests/: BusArbiter.cpp  CMakeLists.txt  FlattenTest.cpp  FlattenTest.v  IntegerUnit.cpp  MemoryArbiter.cpp  RegisterFile.cpp  StationParameter.cpp  StationValue.cpp  shared.h
src/rom/: asm.S  linker.ld  main.c
src/tests/: CMakeLists.txt  Testbench.v  linker.ld  main.cpp  riscv_test.h  verilator-config.cmake
